force-app/main/default/objects/Case/fields/Current_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Team_Code__c</fullName>
    <formula>CASE(Current_Team__c,&quot;FARIDABAD&quot;,1,&quot;NOIDA&quot;,2,&quot;GURGAON&quot;,3,&quot;GHAZIABAD&quot;,4,&quot;VAISHALI NAGAR&quot;,5,&quot;DELHI&quot;,6,&quot;THANE&quot;,7,&quot;VISAKHAPATNAM&quot;,8,&quot;TRIVANDRUM&quot;,9,&quot;MUMBAI&quot;,10,&quot;VIRAR&quot;,11,&quot;AGRA&quot;,12,&quot;BANJARA HILLS&quot;,13,&quot;NAGPUR&quot;,14,&quot;SURAT&quot;,15,&quot;LUCKNOW&quot;,16,&quot;KOLHAPUR&quot;,17,&quot;INDORE&quot;,18,&quot;KARNAL&quot;,19,&quot;BIKANER&quot;,20,&quot;BORIVALI&quot;,21,&quot;JANAKPURI&quot;,22,&quot;COCHIN&quot;,23,&quot;NAVI MUMBAI&quot;,24,&quot;CHENNAI&quot;,25,&quot;KOLKATA&quot;,26,&quot;GREENPARK&quot;,27,&quot;CHANDIGARH&quot;,28,&quot;JAYANAGAR&quot;,29,&quot;BHOPAL&quot;,30,&quot;RAIPUR&quot;,31,&quot;COIMBATORE&quot;,32,&quot;BHIWADI&quot;,33,&quot;LUDHIANA&quot;,34,&quot;AHMEDABAD&quot;,35,&quot;PUNE&quot;,36,&quot;JALANDHAR&quot;,37,&quot;VADODARA&quot;,38,&quot;MEERUT&quot;,39,&quot;PUDUCHERRY&quot;,40,&quot;ROHTAK&quot;,41,&quot;ERODE&quot;,42,&quot;GUNTUR&quot;,43,&quot;KAVI NAGAR&quot;,44,&quot;ODHAV&quot;,45,&quot;PRABHADEVI&quot;,46,&quot;PANVEL&quot;,47,&quot;MANGALORE&quot;,48,&quot;SOUTH KOLKATA&quot;,49,&quot;HALDWANI&quot;,50,&quot;TUTICORIN&quot;,51,&quot;PITAMPURA&quot;,52,&quot;KALYAN&quot;,53,&quot;GWALIOR&quot;,54,&quot;VIJAYANAGAR&quot;,55,&quot;AURANGABAD&quot;,56,&quot;KOLLAM&quot;,57,&quot;KUKATPALLY&quot;,58,&quot;TAMBARAM&quot;,59,&quot;AMRAVATI&quot;,60,&quot;SECTOR 63 NOIDA&quot;,61,&quot;KHARADI&quot;,62,&quot;WARJE&quot;,63,&quot;AHMEDNAGAR&quot;,64,&quot;RAJKOT&quot;,65,&quot;BHUBANESHWAR&quot;,66,&quot;KANPUR&quot;,67,&quot;MYSORE&quot;,68,&quot;VIJAYAWADA&quot;,69,&quot;KONDHWA&quot;,70,&quot;JAMSHEDPUR&quot;,71,&quot;ELECTRONIC CITY&quot;,72,&quot;UJJAIN&quot;,73,&quot;VESU&quot;,74,&quot;CSO CF&quot;,75,&quot;WARANGAL&quot;,76,&quot;HINJEWADI&quot;,77,&quot;TRICHY&quot;,78,&quot;NELLORE&quot;,79,&quot;KOTA&quot;,80,&quot;JUNAGADH&quot;,81,&quot;UDAIPUR&quot;,82,&quot;UPPAL&quot;,83,&quot;JABALPUR&quot;,84,&quot;GACHIBOWLI&quot;,85,&quot;NASHIK&quot;,86,&quot;THRISSUR&quot;,87,&quot;SALEM&quot;,88,&quot;MADURAI&quot;,89,&quot;CALICUT&quot;,90,&quot;INDIRANAGAR&quot;,91,&quot;BOISAR&quot;,92,&quot;GHATKOPAR&quot;,93,&quot;KASTURINAGAR&quot;,94,&quot;AMBATTUR&quot;,95,&quot;HARIDWAR&quot;,96,&quot;MALLESHWARAM&quot;,97,&quot;OMR&quot;,98,&quot;MARATHAHALLI&quot;,99,&quot;PIMPRI CHINCHWAD&quot;,100,&quot;JODHPUR&quot;,101,&quot;JAIPUR&quot;,102,&quot;DEHRADUN&quot;,103,&quot;VARANASI&quot;,104,&quot;CSO&quot;,105,&quot;CORPORATE OFFICE&quot;,106,&quot;FORT MUMBAI&quot;,107,&quot;CPU&quot;,108,&quot;BANGALORE&quot;,109,&quot;ROSHNI_VARANASI&quot;,110,&quot;ROSHNI_KAUSHAMBI&quot;,111,&quot;ROSHNI_UNNAO&quot;,112,&quot;ROSHNI_REWA&quot;,113,&quot;ROSHNI_MEERUT&quot;,114,&quot;ROSHNI_SIDHI&quot;,115,&quot;ROSHNI_ERODE&quot;,116,&quot;ROSHNI_PCMC&quot;,117,&quot;ROSHNI_MIRA ROAD&quot;,118,&quot;ROSHNI_HYDERABAD&quot;,119,&quot;ROSHNI_RAJSAMAND&quot;,120,&quot;ROSHNI_WASHIM&quot;,121,&quot;ROSHNI_Khamgaon&quot;,122,&quot;ROSHNI_INDORE&quot;,123,&quot;ROSHNI_CHENNAI&quot;,124,&quot;ROSHNI_SURAT&quot;,125,&quot;ROSHNI_RAJKOT&quot;,126,&quot;ROSHNI_NAGAUR&quot;,127,&quot;ROSHNI_JETPUR&quot;,128,&quot;ROSHNI_WARDHA&quot;,129,&quot;ROSHNI_UJJAIN&quot;,130,&quot;ROSHNI_SALEM&quot;,131,&quot;ROSHNI_RUDRAPUR&quot;,132,&quot;ROSHNI_RAJAMUNDRY&quot;,133,&quot;ROSHNI_JAUNPUR&quot;,134,&quot;ROSHNI_PATANCHERU&quot;,135,&quot;ROSHNI_HALOL&quot;,136,&quot;ROSHNI_AMBERNATH&quot;,137,&quot;ROSHNI_NAMAKKAL&quot;,138,&quot;ROSHNI_AHMEDABAD&quot;,139,&quot;ROSHNI_BHILAI&quot;,140,&quot;ROSHNI_BAREILLY&quot;,141,&quot;ROSHNI_KALOL&quot;,142,&quot;ROSHNI_ANAND&quot;,143,&quot;ROSHNI_COIMBATORE&quot;,144,&quot;ROSHNI_Nagpur&quot;,145,&quot;ROSHNI_ELURU&quot;,146,&quot;ROSHNI_UDAIPUR&quot;,147,&quot;ROSHNI_TIRUNELVELI&quot;,148,&quot;ROSHNI_SANGAREDDY&quot;,149,&quot;ROSHNI_SIKAR&quot;,150,&quot;ROSHNI_Tiruvallur&quot;,151,&quot;ROSHNI_KAKINADA&quot;,152,&quot;ROSHNI_JHANSI&quot;,153,&quot;ROSHNI_KARIM NAGAR&quot;,154,&quot;ROSHNI_CHITTORGARH&quot;,155,&quot;ROSHNI_ANKLESHWAR&quot;,156,&quot;ROSHNI_KHARGONE&quot;,157,&quot;ROSHNI_SATNA&quot;,158,&quot;ROSHNI_KANCHIPURAM&quot;,159,&quot;ROSHNI_PITHAMPUR&quot;,160,&quot;ROSHNI_JAIPUR&quot;,161,&quot;ROSHNI_HIMAT NAGAR&quot;,162,&quot;ROSHNI_AKOLA&quot;,163,&quot;ROSHNI_KESHOD&quot;,164,&quot;ROSHNI_RATLAM&quot;,165,&quot;ROSHNI_MANDSAUR&quot;,166,&quot;ROSHNI_ALLAHABAD&quot;,167,&quot;ROSHNI_SWARGATE- PUNE&quot;,168,&quot;ROSHNI_SURYAPET&quot;,169,&quot;ROSHNI_MORBI&quot;,170,&quot;ROSHNI_GUDIWADA&quot;,171,&quot;ROSHNI_TIRUPPUR&quot;,172,&quot;ROSHNI_CHANDRAPUR&quot;,173,&quot;ROSHNI_RAIBARELLIY&quot;,174,&quot;ROSHNI_JALGAON&quot;,175,&quot;ROSHNI_RATNAGIRI&quot;,176,&quot;ROSHNI_LUCKNOW&quot;,177,&quot;ROSHNI_NASHIK ROAD&quot;,178,&quot;ROSHNI_PEN&quot;,179,&quot;ROSHNI_MAHESANA&quot;,180,&quot;ROSHNI_MORADABAD&quot;,181,&quot;ROSHNI_VIJAYWADA&quot;,182,&quot;FARIDABAD&quot;,183,&quot;ROSHNI_PALI&quot;,184,&quot;ROSHNI_VAPI&quot;,185,&quot;ROSHNI_JODHPUR&quot;,186,&quot;ROSHNI_KARJAT&quot;,187,&quot;ROSHNI_NEEMUCH&quot;,188,&quot;ROSHNI_SAHARANPUR&quot;,189,&quot;ROSHNI_DHARMAPURI&quot;,190,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Team Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>