force-app/main/default/objects/Case/fields/Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if customer consent has been obtained.</description>
    <label>Customer Consent</label>
    <type>Checkbox</type>
</CustomField>