force-app/main/default/objects/Case/fields/Customer_Induced_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Induced_Transaction__c</fullName>
    <description>The designation of the dealing officer.</description>
    <label>Customer Induced Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>