force-app/main/default/objects/Case/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <description>Information and characteristics about the customer.</description>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HL- Sal</fullName>
            </value>
            <value>
                <fullName>HL-SENP</fullName>
            </value>
            <value>
                <fullName>NHL - Sal</fullName>
            </value>
            <value>
                <fullName>NHL - SENP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>