force-app/main/default/objects/Case/fields/Customer_Profile_Text__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile_Text__c</fullName>
    <description>#VALUE!</description>
    <label>Customer Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>