force-app/main/default/objects/Case/fields/Customer_Retention__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention__c</fullName>
    <description>Notes related to customer retention efforts.</description>
    <label>Retention Remarks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Retained With ROI</fullName>
            </value>
            <value>
                <fullName>Customer Not Looking For BT</fullName>
            </value>
            <value>
                <fullName>Not Contactable - Attempt 1</fullName>
            </value>
            <value>
                <fullName>Not Contactable - Attempt 2</fullName>
            </value>
            <value>
                <fullName>Not Contactable - Attempt 3</fullName>
            </value>
            <value>
                <fullName>Not Retained</fullName>
            </value>
            <value>
                <fullName>Retained by - top up followup</fullName>
            </value>
            <value>
                <fullName>Customer Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>