force-app/main/default/objects/Case/fields/Customer_Retention_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention_Status__c</fullName>
    <label>Customer Retention Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Not Retained</fullName>
            </value>
            <value>
                <fullName>Top Up Follow Up</fullName>
            </value>
            <value>
                <fullName>Branch/ICC Follow Up</fullName>
            </value>
            <value>
                <fullName>Not Contactable 1</fullName>
            </value>
            <value>
                <fullName>Not Contactable 2</fullName>
            </value>
            <value>
                <fullName>Not Contactable 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>