force-app/main/default/objects/Case/fields/Customer_Reverted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reverted__c</fullName>
    <formula>IF( Email_Count__c &gt; 1, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reverted</label>
    <type>Text</type>
</CustomField>