force-app/main/default/objects/Case/fields/Customer_VOC__c.field-meta.xml
<CustomField>
    <fullName>Customer_VOC__c</fullName>
    <label>Customer VOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Responsiveness’ of staff</fullName>
            </value>
            <value>
                <fullName>High Rate of Interest</fullName>
            </value>
            <value>
                <fullName>Low Sanction amount</fullName>
            </value>
            <value>
                <fullName>Disbursal Not Received</fullName>
            </value>
            <value>
                <fullName>OTC Not Informed</fullName>
            </value>
            <value>
                <fullName>Insurance Amount not informed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>