force-app/main/default/objects/Case/fields/Date_of_Loan_Sanction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loan_Sanction__c</fullName>
    <description>The date when a loan was approved.</description>
    <label>Date of Loan Sanction</label>
    <type>Date</type>
</CustomField>