force-app/main/default/objects/Case/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <description>The date when a payment was made.</description>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>