force-app/main/default/objects/Case/fields/Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration__c</fullName>
    <description>The date when a registration was completed or approved.</description>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>