force-app/main/default/objects/Case/fields/Date_of_the_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_Cheque__c</fullName>
    <label>NEFT/Cheque Date</label>
    <type>Date</type>
</CustomField>