force-app/main/default/objects/Case/fields/Days_From_Pending_With_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Pending_With_Customer_Date__c</fullName>
    <formula>TODAY() - DATEVALUE(Pending_With_Customer_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Pending With Customer Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>