force-app/main/default/objects/Case/fields/Dealing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#VALUE!</description>
    <label>Dealing Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>