force-app/main/default/objects/Case/fields/Dealing_Officer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Officer_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records the name or ID of the officer assigned to handle a particular case.</description>
    <label>Dealing Officer Assigned</label>
    <type>Checkbox</type>
</CustomField>