force-app/main/default/objects/Case/fields/Dealing_Officer_Designation__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Officer_Designation__c</fullName>
    <description>The date when a record was last modified.</description>
    <label>Dealing Officer Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>