force-app/main/default/objects/Case/fields/Dealing_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Officer_Name__c</fullName>
    <description>The name of the officer responsible for handling the customer&apos;s case.</description>
    <label>Dealing Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>