force-app/main/default/objects/Case/fields/Delink_Loan__c.field-meta.xml
<CustomField>
    <fullName>Delink_Loan__c</fullName>
    <description>Indicates if a loan has been delinked.</description>
    <label>Delink Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>