force-app/main/default/objects/Case/fields/Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Delinquency__c</fullName>
    <label>Delinquency</label>
    <length>32</length>
    <type>Text</type>
</CustomField>