force-app/main/default/objects/Case/fields/Delinquency_History__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_History__c</fullName>
    <description>Tracks the history of delinquent accounts or transactions.</description>
    <label>Delinquency History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>