force-app/main/default/objects/Case/fields/Delinquency_in_last_24_months__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_in_last_24_months__c</fullName>
    <description>Indicates if there have been any instances of late payments in the last 24 months.</description>
    <label>Delinquency in last 24 months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>