force-app/main/default/objects/Case/fields/Delinquency_Status__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status__c</fullName>
    <description>The Rate of Interest (ROI) with Yes Bank.</description>
    <label>Delinquency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sub-Standard</fullName>
            </value>
            <value>
                <fullName>Example</fullName>
                <isActive>false</isActive>
                <label>Example</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>