force-app/main/default/objects/Case/fields/Deliver_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Date__c</fullName>
    <description>The date of delivery for an item or service.</description>
    <label>Deliver Date</label>
    <type>Date</type>
</CustomField>