force-app/main/default/objects/Case/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Information about a customer&apos;s deposit account.</description>
    <label>Deposit Account</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>