force-app/main/default/objects/Case/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Notes or comments related to onboarding a customer or client.</description>
    <label>Boarding Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>