force-app/main/default/objects/Case/fields/Designation_of_Dealing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Designation_of_Dealing_Officer__c</fullName>
    <formula>Dealing_Officer__r.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation of Dealing Officer</label>
    <type>Text</type>
</CustomField>