force-app/main/default/objects/Case/fields/Destination_Branch__c.field-meta.xml
<CustomField>
    <fullName>Destination_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The branch where the transaction or service is being directed.</description>
    <label>Destination Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch_Master__c.Branch_Type__c</field>
            <operation>notEqual</operation>
            <value>Hub</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Cases (Destination Branch)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>