force-app/main/default/objects/Case/fields/Disbursement_Id__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unique identifier for a disbursement transaction.</description>
    <label>Disbursement Id</label>
    <referenceTo>Disbursement_Details__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>