force-app/main/default/objects/Case/fields/Disbursement_letter_Welcome_letter__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_letter_Welcome_letter__c</fullName>
    <label>Disbursement letter/Welcome letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>