force-app/main/default/objects/Case/fields/Disbursement_Processed__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Processed__c</fullName>
    <description>Indicates whether the disbursement process has been completed.</description>
    <label>Disbursement Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>