force-app/main/default/objects/Case/fields/DO_Name__c.field-meta.xml
<CustomField>
    <fullName>DO_Name__c</fullName>
    <description>Name of the Dealing Officer handling the case.</description>
    <label>DO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>