force-app/main/default/objects/Case/fields/DO_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>DO_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO Notification Sent</label>
    <type>Checkbox</type>
</CustomField>