force-app/main/default/objects/Case/fields/Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Document_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a document is attached.</description>
    <label>Document Attached?</label>
    <type>Checkbox</type>
</CustomField>