force-app/main/default/objects/Case/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <description>A unique identifier assigned to a specific document or record.</description>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>