force-app/main/default/objects/Case/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>The mobile number of a contact person or customer.</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>