force-app/main/default/objects/Case/fields/Document_Received_and_Updated__c.field-meta.xml
<CustomField>
    <fullName>Document_Received_and_Updated__c</fullName>
    <description>Indicates the date when a document was received and last updated.</description>
    <label>Document Received and Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>PDD Deferred</fullName>
            </value>
            <value>
                <fullName>PDD Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>