force-app/main/default/objects/Case/fields/Document_Release_Approval__c.field-meta.xml
<CustomField>
    <fullName>Document_Release_Approval__c</fullName>
    <description>Shows if the release of a document was approved.</description>
    <label>Document Release Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>