force-app/main/default/objects/Case/fields/Document_Released__c.field-meta.xml
<CustomField>
    <fullName>Document_Released__c</fullName>
    <description>Indicates if a document has been released.</description>
    <label>Document Released</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>