force-app/main/default/objects/Case/fields/Document_Shared__c.field-meta.xml
<CustomField>
    <fullName>Document_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a document has been shared.</description>
    <label>Document Shared?</label>
    <type>Checkbox</type>
</CustomField>