force-app/main/default/objects/Case/fields/Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>Documents_Attached__c</fullName>
    <description>Indicates if any documents are attached to the record.</description>
    <label>Documents Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>