force-app/main/default/objects/Case/fields/DPD_Information__c.field-meta.xml
<CustomField>
    <fullName>DPD_Information__c</fullName>
    <description>Stores information related to Days Past Due, a metric used in credit analysis.</description>
    <label>DPD Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>