force-app/main/default/objects/Case/fields/Due_Charge_Creation__c.field-meta.xml
<CustomField>
    <fullName>Due_Charge_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks the creation of due charges for a particular account or transaction.</description>
    <label>Due Charge Creation</label>
    <type>Checkbox</type>
</CustomField>