force-app/main/default/objects/Case/fields/Due_Charges_Created__c.field-meta.xml
<CustomField>
    <fullName>Due_Charges_Created__c</fullName>
    <description>Tracks the creation of any outstanding charges or fees.</description>
    <label>Due Charges Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>