force-app/main/default/objects/Case/fields/Due_Charges_Id__c.field-meta.xml
<CustomField>
    <fullName>Due_Charges_Id__c</fullName>
    <description>Unique identifier for due charges.</description>
    <label>Due Charges Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>