force-app/main/default/objects/Case/fields/Due_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the due date has been changed.</description>
    <label>Due Date Changed?</label>
    <type>Checkbox</type>
</CustomField>