force-app/main/default/objects/Case/fields/Duplicate_Found__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if a duplicate record has been identified.</description>
    <label>Duplicate Found</label>
    <type>Checkbox</type>
</CustomField>