force-app/main/default/objects/Case/fields/ECS_Approved__c.field-meta.xml
<CustomField>
    <fullName>ECS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if Electronic Clearing Service (ECS) has been approved.</description>
    <label>ECS Approved</label>
    <type>Checkbox</type>
</CustomField>