force-app/main/default/objects/Case/fields/EMAIL_DPT_CASE_ASSIGNED_TO__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_DPT_CASE_ASSIGNED_TO__c</fullName>
    <label>EMAIL_DPT_CASE_ASSIGNED_TO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>