force-app/main/default/objects/Case/fields/Email_Etiquettes__c.field-meta.xml
<CustomField>
    <fullName>Email_Etiquettes__c</fullName>
    <description>15%</description>
    <label>Email Etiquettes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>