force-app/main/default/objects/Case/fields/Email_ID_of_Categorization_User__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_of_Categorization_User__c</fullName>
    <formula>Categorisation_User__r.Email</formula>
    <label>Email ID of Categorization User</label>
    <type>Text</type>
</CustomField>