force-app/main/default/objects/Case/fields/Email_id_verified__c.field-meta.xml
<CustomField>
    <fullName>Email_id_verified__c</fullName>
    <label>Email id verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>