force-app/main/default/objects/Case/fields/Email_Update__c.field-meta.xml
<CustomField>
    <fullName>Email_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Update</label>
    <type>Checkbox</type>
</CustomField>