force-app/main/default/objects/Case/fields/Email_Update_Description__c.field-meta.xml
<CustomField>
    <fullName>Email_Update_Description__c</fullName>
    <label>Email Update Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>