force-app/main/default/objects/Case/fields/Emi_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Emi_Due_Date__c</fullName>
    <label>Emi Due Date</label>
    <type>Date</type>
</CustomField>