force-app/main/default/objects/Case/fields/EMI_Due_Date_Informed__c.field-meta.xml
<CustomField>
    <fullName>EMI_Due_Date_Informed__c</fullName>
    <label>EMI Due Date Informed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>