force-app/main/default/objects/Case/fields/Employee_ID_of_Categorization_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_of_Categorization_User__c</fullName>
    <formula>Categorisation_User__r.Employee_ID__c</formula>
    <label>Employee ID of Categorization User</label>
    <type>Text</type>
</CustomField>