force-app/main/default/objects/Case/fields/Employee_Id_of_the_Closer__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id_of_the_Closer__c</fullName>
    <description>Employee ID of the person who closed the case.</description>
    <formula>If ( ISPICKVAL( Status , &apos;Closed&apos;), ( LastModifiedBy.Employee_ID__c ), Null)</formula>
    <label>Employee Id of the Closer</label>
    <type>Text</type>
</CustomField>