force-app/main/default/objects/Case/fields/Employee_Id_of_the_Creator__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id_of_the_Creator__c</fullName>
    <description>The employee ID of the person who created the record.</description>
    <formula>First_Owner__r.Employee_ID__c</formula>
    <label>Employee Id of the Creator</label>
    <type>Text</type>
</CustomField>